[package]
name = "pterodactyl_api"
version = "0.1.1"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Library to interface with the Pterodactyl API"
homepage = "https://github.com/Earthcomputer/pterodactyl_api"
repository = "https://github.com/Earthcomputer/pterodactyl_api"

[features]
stream = ["reqwest/stream", "futures-core"]
websocket = ["async-tungstenite", "futures-io", "futures-util"]

[dev-dependencies]
async-tungstenite = { version = "0.20", features = ["tokio-runtime", "tokio-native-tls"] }
tokio = { version = "1.26", features = ["macros"] }

[dependencies]
async-trait = "0.1"
async-tungstenite = { version = "0.20", optional = true }
bytes = "1.4"
futures-core = { version = "0.3", optional = true }
futures-io = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
thiserror = "1.0"
time = { version = "0.3", features = ["parsing"] }
urlencoding = "2.1"
uuid = { version = "1.3", features = ["serde"] }

