[package]
name = "pterodactyl_api"
version = "0.2.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Library to interface with the Pterodactyl API"
homepage = "https://github.com/Earthcomputer/pterodactyl_api"
repository = "https://github.com/Earthcomputer/pterodactyl_api"

[features]
stream = ["reqwest/stream", "futures-core"]
websocket = ["async-tungstenite", "futures-io", "futures-util"]

[dev-dependencies]
async-tungstenite = { version = "0.28", features = ["tokio-runtime", "tokio-native-tls"] }
tokio = { version = "1.41", features = ["macros"] }

[dependencies]
async-tungstenite = { version = "0.28", optional = true }
bytes = "1.8"
futures-core = { version = "0.3", optional = true }
futures-io = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
thiserror = "2.0"
time = { version = "0.3", features = ["parsing"] }
urlencoding = "2.1"
uuid = { version = "1.11", features = ["serde"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
